<resources>
    <string name="app_name">Igroteka</string>
    <string name="hint_search_query">Search 491 352 games</string>
    <string name="hint_search_query_search">Search</string>
    <string name="hint_search_query_games">games</string>
    <string name="content_game_poster">Game poster</string>
    <string name="content_game_title">Cossacks: Back to War</string>
    <string name="content_game_release_date">Release date:</string>
    <string name="content_game_date">May 23, 2020</string>
    <string name="error_unknown_on_download">Unexpected error while trying to fetch games!</string>
    <string name="games_placeholder">Type the game name and press the search button</string>
    <string name="count_games_error">Something went wrong when receiving count games. Please, check your connection and try again!</string>
    <string name="search_error">Something went wrong when downloading games. Please, check your connection and try again!</string>
    <string name="empty_result">No results matching your query!</string>
    <string name="search_button">Search button</string>

    <string name="windows_logo">Windows logo</string>
    <string name="playstation_logo">Playstation logo</string>
    <string name="xbox_logo">Xbox logo</string>
    <string name="android_logo">Android logo</string>
    <string name="apple_logo">Apple logo</string>
    <string name="nintendo_switch_logo">Nintendo switch logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>